Fix 3 misspellings of "characters"

Bug: 793766
Change-Id: Ie82fc929ae81c3894f10fa0efa0867c21258f392
Reviewed-on: https://chromium-review.googlesource.com/966842
Reviewed-by: Jungshik Shin <jshin@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Henrik Boström <hbos@chromium.org>
Commit-Queue: Harald Alvestrand <hta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544045}
Former-commit-id: 1ab8bfcc117475ce646bb6ea3f05219d4e0f0e05